tests/agl/rejections/type/for_range_non_int_to.agl
for i in 1 to "five" do
  ()
done
